--- a/form.html
+++ b/form.html
@@ -28,15 +28,15 @@
  
 <fieldset>
 <legend align="left">Регистрационная информация</legend>
-Введите логин: <input type="text" name="Reg_login" value="<10 символов"/><br/>
-Введите пароль: <input type="password" name="Reg_password" value="123456"/><br/>
+Введите логин: <input type="text" name="Reg_login" placeholder="<10 символов"/><br/>
+Введите пароль: <input type="password" name="Reg_password" placeholder="******"/><br/>
 </fieldset>
 
 <fieldset>
 <legend align="center">Личная информация</legend>
-Имя:<input type="text" value="Ваше имя" name="form_name"/><br/>
-Фамилия:<input type="text" value="Ваша фамилия" name="form_fam"/><br/>
-Отчество:<input type="text" value="Ваше отчество" name="form_otch"/><br/>
+Имя:<input type="text" placeholder="Ваше имя" name="form_name"/><br/>
+Фамилия:<input type="text" placeholder="Ваша фамилия" name="form_fam"/><br/>
+Отчество:<input type="text" placeholder="Ваше отчество" name="form_otch"/><br/>
 
 <label for="form_sex">Ваш пол:</label>
 <input type="radio"  name="form_sex" value="1" id="form_sex1"/>
